# Splink_SPM

./: .gitattributes  .gitignore  README.md  solutionplan.md
BlockingPy-main/: .coveragerc  .gitignore  THIRD_PARTY  pyproject.toml
BlockingPy-main/.github/workflows/: coverage.yml  lint_and_types.yml  publish.yml  run_tests.yml
BlockingPy-main/benchmark/: all_runs_raw_cpu.csv  all_runs_raw_gpu.csv  all_runs_summary_cpu.csv  all_runs_summary_gpu.csv  benchmark.ipynb  benchmark_gpu.ipynb  data_1000.csv  data_10000.csv
BlockingPy-main/docs/: changelog.md  conf.py  requirements.txt
BlockingPy-main/docs/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree
BlockingPy-main/docs/_build/doctrees/api/: blocker.doctree  blocking_result.doctree  index.doctree
BlockingPy-main/docs/_build/doctrees/examples/: deduplication.doctree  index.doctree  record_linkage.doctree
BlockingPy-main/docs/_build/doctrees/getting_started/: index.doctree  installation.doctree  quickstart.doctree
BlockingPy-main/docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
BlockingPy-main/docs/api/: configuration.md
BlockingPy-main/docs/examples/: abtbuy.md  deduplication.md  embedding_dedup.md  index.md  record_linkage.md  splink_integration.md
BlockingPy-main/docs/getting_started/: index.md
BlockingPy-main/docs/html/: .buildinfo  .buildinfo.bak  blocklib_comp.html  changelog.html  genindex.html  gpu.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
BlockingPy-main/docs/html/.doctrees/: blocklib_comp.doctree  changelog.doctree  environment.pickle  gpu.doctree  index.doctree
BlockingPy-main/docs/html/_modules/: index.html
BlockingPy-main/docs/html/_sources/: blocklib_comp.md.txt  gpu.md.txt  index.md.txt
BlockingPy-main/docs/html/api/: backends.html  blocker.html  blocking_result.html  configuration.html  data_structures.html  datasets.html  encoders.html  index.html
BlockingPy-main/docs/html/examples/: deduplication.html  deduplication_2.html  embedding_dedup.html  gpu_example_dedup.html  index.html  record_linkage.html  recordlinkage_integration.html  splink_integration.html
BlockingPy-main/docs/html/getting_started/: index.html  installation.html  quickstart.html
BlockingPy-main/docs/html/user_guide/: basic_operations.html  configuration_tuning.html  core_concepts.html  evaluation_metrics.html  index.html  input_data_handling.html
BlockingPy-main/docs/user_guide/: evaluation_metrics.md  index.md  input_data_handling.md
BlockingPy-main/tests/: conftest.py  test_annoy_blocker.py  test_blocking.py  test_blocking_result.py  test_controls.py  test_datasets.py  test_faiss_blocker.py  test_gpu_faiss.py  test_hnsw_blocker.py  test_mlpack_blocker.py  test_nnd_blocker.py  test_text_transform.py  test_voyager_blocker.py
planB/: infra_plan.md  (+4 more)
(+146 files in other folders)
